Verif/Test/Invalide/test_erreur_3.58-10.deca
// Description:
//	   test règle 3.58 
// Resultats:
//    Erreur contextuelle
//    Ligne 17 : Les types 'float' et 'type_classe(A)' sont incompatibles avec l'opérateur 'instanceof' (règle 3.58)
// 
// Attributs: exec incorrect automatique
//
// Historique:
//    cree le 20/01/2012

class A {
}

boolean b;
{
   b = 1.0 instanceof A;
}